# ScholarAgent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py
backend/app/models/: evidence_graph.py  paper.py  research_task.py
backend/app/services/: __init__.py  claim_extractor.py  graph_builder.py  report_builder.py
backend/app/tools/: __init__.py  arxiv_search.py  openalex_search.py  paper_search.py
backend/tests/: test_arxiv_search.py  test_claim_extractor.py  test_evidence_graph.py  test_main.py  test_openalex_search.py  test_paper_search.py  test_report_builder.py
docs/: DECISIONS.md  PROGRESS.md  PROJECT_PLAN.md
