[project]
name = "scholar-agent-backend"
version = "0.1.0"
description = "FastAPI backend for ScholarAgent."
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
